--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -40,12 +40,15 @@ h1 {
     text-transform: uppercase;
 }
 
+.modal-octocat {
+    width: 10rem;
+}
+
 .modal-content {
     background-color: #202020;
     color: #c2b280;
     margin: 30px auto;
     padding: 22px;
-    height: 40%;
     width: 80%;
     text-align: center;
     border-radius: 10px;
@@ -75,7 +78,7 @@ h1 {
     color: #c2b280;
     padding: 20px;
     text-align: center;
-    text-transform: uppercase; 
+    text-transform: uppercase;
 }
 
 /* cards section */
@@ -94,7 +97,9 @@ h1 {
 }
 
 /* levels section */
-.easy-level, .medium-level, .hard-level {
+.easy-level,
+.medium-level,
+.hard-level {
     text-align: center;
     margin: 0 auto;
     height: 100%;
@@ -152,7 +157,8 @@ h1 {
 }
 
 /* scores and moves counter */
-#score, .movescounter{
+#score,
+.movescounter {
     background-color: #ff9a18;
     color: #202020;
     max-width: 100px;
@@ -185,7 +191,10 @@ h1 {
     box-shadow: #ff9a18 0px 20px 30px;
 }
 
-.easy:hover, .medium:hover, .hard:hover, .play:hover {
+.easy:hover,
+.medium:hover,
+.hard:hover,
+.play:hover {
     color: #202020;
     animation-name: div-zoom;
     animation-duration: 0.5s;
@@ -199,26 +208,26 @@ h1 {
 }
 
 .medium:hover {
-    background-color: #fffc00; 
+    background-color: #fffc00;
     border: 3px solid #fffc00;
     box-shadow: 0px 20px 30px #fffc00;
 }
 
 .hard:hover {
-    background-color: #ff0000; 
+    background-color: #ff0000;
     border: 3px solid #ff0000;
     box-shadow: 0px 20px 30px#ff0000;
 }
 
 .reset:hover {
-    background-color: #ff9a18; 
+    background-color: #ff9a18;
     box-shadow: 0px 20px 30px #ff9a18;
     border: 3px #ff9a18 solid;
 }
 
 .modal-close-button:hover,
-.modal-replay-button:hover  {
-    background-color: #ff9a18; 
+.modal-replay-button:hover {
+    background-color: #ff9a18;
     box-shadow: 0px 20px 30px #ff9a18;
     border: 3px #ff9a18 solid;
 }
@@ -255,6 +264,7 @@ h1 {
     from {
         transform: scale(1);
     }
+
     to {
         transform: scale(1.05);
     }
