--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -1,22 +1,28 @@
+@import url("https://use.typekit.net/ijo7yff.css"); 
+@import url("https://use.typekit.net/ijo7yff.css");
+
 body {
-    background-color: #202020;
+    background-color:#373e98;
+    font-family: 'roc-grotesk-wide', sans-serif;
 }
 
 /* header and titles section */
 
 .navbar {
-    background-color: #ff9a18;
+    background-color: #373e98;
 }
 
 .navbar-brand {
-    color: #202020;
+    color: #ffffff;
     margin: auto;
-    text-transform: uppercase;
 }
 
-h1 {
-    font-size: 1.7rem;
+.navlink a {
+    color: white;
 }
+
+
+
 
 /* modal */
 .modal {
@@ -74,11 +80,24 @@ h1 {
     border: 3px #c2b280 solid;
 }
 
-.game-header {
-    color: #c2b280;
+.game-header { 
     padding: 20px;
     text-align: center;
+}
+
+ h2 {
+    font-family: cortado;
+    color: white;
+    font-size: 3rem;
+}
+
+h1 {
+    font-family: 'roc-grotesk-wide', sans-serif;
     text-transform: uppercase;
+    font-weight: 900;
+    color: white;
+    font-size: 6rem;
+
 }
 
 /* cards section */
@@ -87,13 +106,12 @@ h1 {
     height: 120px;
     width: 120px;
     margin: 15px;
-    border-radius: 20px;
-    border: 3px #ff9a18 solid;
 }
 
 .card-back {
-    background-image: url('../images/smiley.webp');
+    background-image: url('../images/question-mark-card.png');
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
 /* levels section */
@@ -123,31 +141,36 @@ h1 {
 
 /* instructions section */
 .instructions-header {
-    color: #ff9a18;
+    color: #ffffff;
     margin: 5px;
     font-weight: bold;
     text-transform: uppercase;
 }
 
 .instructions {
-    color: #c2b280;
+    color: #ffffff;
     margin: 10px;
     padding: 5px;
     text-align: center;
-    text-transform: uppercase;
-    border: 3px #c2b280 solid;
+    border: 3px #fee36e solid;
+    border-radius: 5px;
+}
+
+.instructions h4 {
+    font-size: 2rem;
 }
 
 /* buttons section */
 
 .btn {
-    background-color: #ff9a18;
-    color: #202020;
+    background-color: #fee36e;
+    color: #373e98;
     min-width: 100px;
     margin: 15px;
     font-weight: 600;
     text-transform: uppercase;
-    border: 3px solid #c2b280;
+    font-family: 'roc-grotesk-extrawide', sans-serif;
+    font-size: .8rem;
 }
 
 .reset {
@@ -159,13 +182,15 @@ h1 {
 /* scores and moves counter */
 #score,
 .movescounter {
-    background-color: #ff9a18;
-    color: #202020;
+    background-color: #fee36e;
+    color: #373e98;
     max-width: 100px;
     margin: auto;
     font-weight: bold;
     border-radius: 5px;
-    border: 3px solid #c2b280;
+    font-family: 'roc-grotesk-extrawide', sans-serif;
+    font-size: .8rem;
+    
 }
 
 #score {
