--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,5 +1,10 @@
+
 body {
-    background-color: #202020;
+    background-color: #373e98;
+}
+
+a {
+    color: white;
 }
 
 /* header and titles section */
@@ -8,14 +13,17 @@ body {
     background-color: #ff9a18;
 }
 
+
 .navbar-brand {
-    color: #202020;
+    color: white;
     margin: auto;
     text-transform: uppercase;
 }
 
+
 h1 {
     font-size: 1.7rem;
+    color: white;
 }
 
 
@@ -86,7 +94,7 @@ h1 {
 
 /* hover section */
 .navbar-brand h2 {
-    color: #202020;
+    color: #ffffff;
 }
 
 
@@ -113,11 +121,10 @@ h1 {
     padding: 5px;
     min-height: 50px;
     border-radius: 15px;
-    border: 3px #ff9a18 solid;
 }
 
 .card-back {
-    background-image: url('../images/smiley.webp');
+    background-image: url('images/question-mark-card.png');
     background-repeat: no-repeat;
     padding:5px;
     margin: 5px;
