--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -1,9 +1,10 @@
-@import url("https://use.typekit.net/ijo7yff.css"); 
+@import url("https://use.typekit.net/ijo7yff.css");
 @import url("https://use.typekit.net/ijo7yff.css");
 
 body {
-    background-color:#373e98;
+    background-color: #373e98;
     font-family: 'roc-grotesk-wide', sans-serif;
+    position: relative;
 }
 
 /* header and titles section */
@@ -21,19 +22,20 @@ body {
     color: white;
 }
 
-
-
-
 /* modal */
 .modal {
+    position: absolute;
     background-color: #202020;
     display: none;
-    position: fixed;
-    top: 250px;
-    left: 340px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 50%;
     z-index: 1;
     height: 50%;
     width: 50%;
+    transform: translateX(-50%) translateY(-50%);
     text-align: center;
     border-radius: 10px;
     border: 5px #ff9a18 solid;
@@ -50,20 +52,40 @@ body {
     width: 10rem;
 }
 
-.modal-content {
-    background-color: #202020;
+.speech {
     color: #c2b280;
-    margin: 30px auto;
-    padding: 22px;
-    width: 80%;
+    position: relative;
+    width: 22rem;
+    height: 8rem;
     text-align: center;
-    border-radius: 10px;
-    border: 4px #ff9a18 solid;
+    background-color: #202020;
+    border: 4px solid #ff9a18;
+    border-radius: 30px;
+    z-index: 1000;
+    margin-bottom: 1rem;
+    padding: 1rem;
 }
 
-.modal-content p {
-    margin: 5px;
-    text-transform: uppercase;
+.speech:after,
+.speech:before {
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 100%;
+    z-index: 1001;
+}
+
+.speech:after {
+    right: 68px;
+    border: 12px solid;
+    border-color: #202020 transparent transparent #202020;
+}
+
+.speech:before {
+    right: 66px;
+    border: 15px solid;
+    border-color: #ff9a18 transparent transparent #ff9a18;
 }
 
 .modal-close-button,
@@ -80,12 +102,12 @@ body {
     border: 3px #c2b280 solid;
 }
 
-.game-header { 
+.game-header {
     padding: 20px;
     text-align: center;
 }
 
- h2 {
+h2 {
     font-family: cortado;
     color: white;
     font-size: 3rem;
@@ -190,7 +212,6 @@ h1 {
     border-radius: 5px;
     font-family: 'roc-grotesk-extrawide', sans-serif;
     font-size: .8rem;
-    
 }
 
 #score {
