--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -18,13 +18,15 @@ a, a:visited, a:hover, a:active {
 }
 
 .navbar-brand {
-    color: #ffffff;
+    color: #ffffff !important;
     margin: auto;
 }
 
-.nav-link a {
-    color: white;
+.nav-item a {
+    color: #ffffff !important;
+
 }
+
 
 /* modal */
 .modal {
@@ -114,7 +116,7 @@ a, a:visited, a:hover, a:active {
 h2 {
     font-family: cortado;
     color: white;
-    font-size: 3rem;
+    font-size: 4vw;
 }
 
 h1 {
@@ -122,7 +124,7 @@ h1 {
     text-transform: uppercase;
     font-weight: 900;
     color: white;
-    font-size: 6rem;
+    font-size: 8.5vw;
 
 }
 
