--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -39,7 +39,7 @@ a:active {
 /* modal */
 .modal {
     position: absolute;
-    background-color: #202020;
+    background-color: #373e98;;
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -52,11 +52,11 @@ a:active {
     transform: translateX(-50%) translateY(-50%);
     text-align: center;
     border-radius: 10px;
-    border: 5px #ff9a18 solid;
+    border: 5px #fee36e solid;
 }
 
 .modal-heading {
-    color: #ff0000;
+    color: #ffffff;
     margin: 15px;
     font-weight: bolder;
     text-transform: uppercase;
@@ -67,13 +67,13 @@ a:active {
 }
 
 .speech {
-    color: #c2b280;
+    color: white;
     position: relative;
     width: 22rem;
     height: 8rem;
     text-align: center;
-    background-color: #202020;
-    border: 4px solid #ff9a18;
+    background-color:  #373e98;
+    border: 4px solid #fee36e;
     border-radius: 30px;
     z-index: 1000;
     margin-bottom: 1rem;
@@ -93,19 +93,19 @@ a:active {
 .speech:after {
     right: 68px;
     border: 12px solid;
-    border-color: #202020 transparent transparent #202020;
+    border-color: #373e98 transparent transparent #373e98;
 }
 
 .speech:before {
     right: 66px;
     border: 15px solid;
-    border-color: #ff9a18 transparent transparent #ff9a18;
+    border-color: #fee36e transparent transparent #fee36e;
 }
 
 .modal-close-button,
 .modal-replay-button {
-    background-color: #ff9a18;
-    color: #202020;
+    background-color: #fee36e;
+    color: #373e98;
     margin: auto;
     padding: 10px;
     min-width: 110px;
@@ -113,7 +113,7 @@ a:active {
     text-transform: uppercase;
     font-weight: bold;
     border-radius: 5px;
-    border: 3px #c2b280 solid;
+    border: 3px #f16775 solid;
 }
 
 .game-header {
@@ -263,7 +263,7 @@ h1 {
     animation-name: div-zoom;
     animation-duration: 0.5s;
     animation-fill-mode: forwards;
-    box-shadow: #ff9a18 0px 20px 30px;
+    box-shadow: #fee36e 0px 20px 30px;
 }
 
 .easy:hover,
